Правка кода добавления записи в таблицу. Просьба по  этому моменту на занятии дать комментарий.

--- a/phonebook/src/app/person-detail/person-detail.component.html
+++ b/phonebook/src/app/person-detail/person-detail.component.html
@@ -24,7 +24,8 @@
   <div class="col-md-3">
       <div class="col-md-12 settingTitle">Settings fields</div>
       <div>
-          <a (click)="onAddNewPerson(name, number, town)" class="col-md-3 settingBtn">Add</a>
+          <a *ngIf="person != null"  (click)="onAddNewPerson(person.name, person.number, person.town)" class="col-md-3 settingBtn">Add</a>
+          <a *ngIf="person == null"  (click)="onAddNewPerson(name, number, town)" class="col-md-3 settingBtn">Add</a>
           <a (click)="onNoSelect()" class="col-md-4 settingBtn">Clear</a>
       </div>
     </div>  
