--- a/Lesson7/phonebook/src/app/contact/contact.component.html
+++ b/Lesson7/phonebook/src/app/contact/contact.component.html
@@ -1,3 +1,4 @@
+<span [hidden]=!isLoading>Loading...</span>
 <table class='table table-hover'>
   <thead>
     <tr>
@@ -16,7 +17,7 @@
             {{person.name}}
           </td>
           <td>
-            {{person.phone}}
+            {{person.phone | number}}
           </td>
           <td>
             {{person.town}}
