--- a/Lesson7/phonebook/src/app/app.component.html
+++ b/Lesson7/phonebook/src/app/app.component.html
@@ -19,6 +19,9 @@
           <li routerLinkActive="active">
             <a routerLink="/add">Add</a>
           </li>
+          <li routerLinkActive="active">
+            <a routerLink="/groups">Groups</a>
+          </li>
       </ul>
       <div class="navbar-form navbar-right">
         <app-search></app-search>
