--- a/Lesson7/phonebook/src/app/add-contact/add-contact.component.html
+++ b/Lesson7/phonebook/src/app/add-contact/add-contact.component.html
@@ -47,7 +47,7 @@
         <label class="control-label col-md-2" for="Group">Group</label>
         <div class="col-md-10">   
           <select  class="form-control" formControlName="groups" id="Group" name="Group">
-            <option *ngFor="let group of groups" [ngValue]="group">{{group.name}}</option>
+            <option *ngFor="let gr of group" [ngValue]="group" [selected]="group.id === selectedGroup.id">{{group.name}}</option>
           </select>  
       </div>
     </div>
