--- a/Lesson7/phonebook/src/app/app.component.html
+++ b/Lesson7/phonebook/src/app/app.component.html
@@ -14,13 +14,16 @@
             <a routerLink="/contacts">Contacts</a>
           </li>
           <li routerLinkActive="active">
+            <a routerLink="/groups">Groups</a>
+          </li>
+          <li routerLinkActive="active">
             <a routerLink="/about">About</a>
           </li>
           <li routerLinkActive="active">
-            <a routerLink="/add">Add</a>
+            <a routerLink="/add-person">Add Person</a>
           </li>
           <li routerLinkActive="active">
-            <a routerLink="/groups">Groups</a>
+            <a routerLink="/add-group">Add Group</a>
           </li>
       </ul>
       <div class="navbar-form navbar-right">
