--- a/Lesson7/phonebook/src/app/groups/groups.component.html
+++ b/Lesson7/phonebook/src/app/groups/groups.component.html
@@ -1,18 +1,8 @@
-<div class="page-header">
-    <h1>
-      Groups
-      <small>list</small>
-    </h1>
-  </div>
   <span [hidden]=!isLoading>Loading...</span>
   <table class="table table-hover">
     <thead>
-      <th>#</th>
+      <th>ID</th>
       <th>Name</th>
-      <th>
-        <a routerLink="/groupadd">Add</a>
-      </th>
-      <th></th>
     </thead>
     <tbody>
       <tr *ngFor="let group of groups | async">
@@ -20,12 +10,11 @@
         <td>
           {{group.name}}
         </td>
-        <td>
-          <a routerLink="/groupdetail/{{group.id}}">Edit</a>
-        </td>
-        <td>
-          <a href="javascript:void(0)" (click)=delete(group.id)>Delete</a>
+        <td class='col-md-1'>
+          <a routerLink="{{group.id}}" class="col-md-6 settingBtn settingTitle">Edit</a>
+          <span (click)="onRemoveGroup(group)" class="col-md-6 close"></span>
         </td>
       </tr>
     </tbody>
   </table>
+  
