--- a/Lesson7/phonebook/src/app/person-detail/person-detail.component.html
+++ b/Lesson7/phonebook/src/app/person-detail/person-detail.component.html
@@ -44,11 +44,19 @@
       </div>
 
       <div class="form-group">
-          <label class="control-label col-md-2" for="Group">Group</label>
-          <div class="col-md-10">   
-            <select  class="form-control" formControlName="groups" id="Group" name="Group">
-              <option *ngFor="let group of groups" [ngValue]="group">{{group.name}}</option>
-            </select>  
+        <label class="control-label col-md-2" for="Group">Group</label>
+        <div class="col-md-10">
+  
+          <select  class="form-control" formControlName="groupsSelect" id="Group">
+            <option *ngFor="let group of groups" [ngValue]="group" [selected]="group.id === selectedGroup.id">{{group.name}}</option>
+          </select>
+  
+        </div>
+      </div>
+  
+      <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+          <button type="submit" [disabled]="form.invalid" class="btn btn-default">Save</button>
         </div>
       </div>
 
@@ -56,12 +64,6 @@
         <ul *ngFor="let error of errors">
           <li>{{error}}</li>
         </ul>
-      </div>
-      
-      <div class="form-group">
-        <div class="col-md-6 col-md-offset-1">
-            <button type="submit" [disabled]="form.invalid" class="col-md-2 col-md-offset-1 settingBtn">Save</button>
-        </div>
       </div>
 
       <div class="form-group">
