--- a/Lesson7/phonebook/src/app/add-group/add-group.component.html
+++ b/Lesson7/phonebook/src/app/add-group/add-group.component.html
@@ -5,7 +5,7 @@
     <label class="control-label col-md-2" for="Name">Group Name</label>
     <div class="col-md-10">
       <input formControlName="name" required class="form-control text-box single-line" id="Name" placeholder="Name" type="text">
-      <span class="text-danger field-validation-error" [hidden]="form.get('name').valid">
+      <span class="text-danger field-validation-error" [hidden]="form.get('name').untouched || form.get('name').valid">
         <span for="Name" class="">
           The Name field required
         </span>
